Updated build to compile with the navigation submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,5 @@
 	path = config_reader
 	url = git@github.com:ut-amrl/config-reader
 [submodule "graph_navigation"]
-	path = graph_navigation
+	path = navigation
 	url = https://github.com/ut-amrl/graph_navigation.git
